Add header and description

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
     <script src="p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
-
   </head>
   <body>
+    <h1>Make a Randomly Generated Map</h1>
+    <p>Click the map to pause the generation.</p>
     <script src="sketch.js"></script>
-  
-
 </body></html>
