--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Make a Randomly Generated Map</h1>
+      <h1>Jess's Random Thoughts</h1>
+      <p>Hi, I'm Jess.</p>
+      <p>Sometimes I make fun code projects, check them out below.</p>
+    <h2>Make a Randomly Generated Map</h2>
     <p>Click the map to pause the generation.</p>
     <script src="sketch.js"></script>
 </body></html>
