--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
       <p>Sometimes I make fun code projects, check them out below.</p>
     <h2>Make a Randomly Generated Map</h2>
     <p>Click the map to pause the generation.</p>
-    <script src="sketch.js"></script>
+    <script src="MakeAMapSketch.js"></script>
 </body></html>
