--- a/index.html
+++ b/index.html
@@ -11,4 +11,6 @@
     <h2>Make a Randomly Generated Map</h2>
     <p>Click the map to pause the generation.</p>
     <script src="MakeAMapSketch.js"></script>
+      <h2>Night Cityscape with Fireworks</h2>
+    <script src="fireworks.js"></script>
 </body></html>
