--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <script src="p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
+    <script src="MakeAMapSketch.js"></script>
+    <script src="fireworks.js"></script>
   </head>
   <body>
     <h1>Jess's Project Notebook</h1>
@@ -10,7 +12,5 @@
     <p>Sometimes I make fun code projects, check them out below.</p>
     <h2>Make a Randomly Generated Map</h2>
     <p>Click the map to pause the generation.</p>
-    <script src="MakeAMapSketch.js"></script>
-    <!--h2>Night Cityscape with Fireworks</h2-->
-    <script src="fireworks.js"></script>
+    <iframe src="MakeAMapSketch.js" width="600px" height="400px"></iframe>    
 </body></html>
