--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
     <p>Sometimes I make fun code projects, check them out below.</p>
     <h2>Make a Randomly Generated Map</h2>
     <p>Click the map to pause the generation.</p>
-    <iframe src="MakeAMapSketch.js" width="600px" height="400px"></iframe>    
+    <iframe src="fireworks.html" width="600px" height="600px"></iframe>    
 </body></html>
