--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
     <p>Sometimes I make fun code projects, check them out below.</p>
     <h2>Make a Randomly Generated Map</h2>
     <p>Click the map to pause the generation.</p>
-    <iframe src="fireworks.html" width="600px" height="600px"></iframe>    
+    <iframe src="https://editor.p5js.org/jesszargo/sketches/21rLD0FW6T" width="600px" height="600px"></iframe>    
 </body></html>
