--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <p>Sometimes I make fun code projects, check them out below.</p>
     <h2>Make a Randomly Generated Map</h2>
     <p>Click the map to pause the generation.</p>
-    <iframe src="https://editor.p5js.org/jesszargo/full/21rLD0FW6T"></iframe>    
+    <iframe width="800" height="800" src="https://editor.p5js.org/jesszargo/full/x5UzcQHiP"></iframe>
+    <h2>Fireworks</h2>
+    <iframe width="800" height="800" src="https://editor.p5js.org/jesszargo/full/21rLD0FW6T"></iframe>    
 </body></html>
