--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <p>Sometimes I make fun code projects, check them out below.</p>
     <h2>Make a Randomly Generated Map</h2>
     <p>Click the map to pause on a map you really like.</p>
-    <iframe width="800" height="842" src="https://editor.p5js.org/jesszargo/full/x5UzcQHiP"></iframe>
+    <p><iframe width="800" height="842" src="https://editor.p5js.org/jesszargo/full/x5UzcQHiP"></iframe></p>
     <h2>Fireworks</h2>
     <p>Randomly generated city, night sky, and fireworks.</p>
-    <iframe width="800" height="842" src="https://editor.p5js.org/jesszargo/full/21rLD0FW6T"></iframe>    
+    <p><iframe width="800" height="842" src="https://editor.p5js.org/jesszargo/full/21rLD0FW6T"></iframe></p>    
 </body></html>
