--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en"><head>
-    <script src="p5.js"></script>
-    <script src="p5.sound.min.js"></script>
+    <!--script src="p5.js"></script>
+    <script src="p5.sound.min.js"></script-->
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
   </head>
@@ -9,7 +9,7 @@
     <p>Hi, I'm Jess.</p>
     <p>Sometimes I make fun code projects, check them out below.</p>
     <h2>Make a Randomly Generated Map</h2>
-    <p>Click the map to pause on a map you really like.</p>
+    <p>Click to pause on a map you really like.</p>
     <p><iframe width="800" height="842" src="https://editor.p5js.org/jesszargo/full/x5UzcQHiP"></iframe></p>
     <h2>Fireworks</h2>
     <p>Randomly generated city, night sky, and fireworks.</p>
