--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <p><iframe width="800" height="842" src="https://editor.p5js.org/jesszargo/full/x5UzcQHiP"></iframe></p>
     <h2>Fireworks</h2>
     <p>Randomly generated city, night sky, and fireworks.</p>
-    <p><iframe width="800" height="842" src="https://editor.p5js.org/jesszargo/full/21rLD0FW6T"></iframe></p>    
+    <p><iframe width="800" height="842" src="https://editor.p5js.org/jesszargo/full/21rLD0FW6T"></iframe></p>  
+      <h2>Flower</h2>
+      <p>Make a flower with a variable number of petals.</p>
+      <p><iframe width="800" height="842" src="https://editor.p5js.org/jesszargo/full/oodeQyODr"></iframe></p>
 </body></html>
