--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
     <p><iframe width="800" height="842" src="https://editor.p5js.org/jesszargo/full/21rLD0FW6T"></iframe></p>  
       <h2>Flower</h2>
       <p>Make a flower with a variable number of petals.</p>
-      <p><iframe src="https://editor.p5js.org/jesszargo/full/oodeQyODr"></iframe></p>
+      <p><iframe width="400" height="400" src="https://editor.p5js.org/jesszargo/full/oodeQyODr"></iframe></p>
 </body></html>
