--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html><html lang="en"><head>
-    <!--script src="p5.js"></script>
-    <script src="p5.sound.min.js"></script-->
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
-  </head>
-  <body>
-    <h1>Jess's Project Notebook</h1>
-    <p>Hi, I'm Jess.</p>
-    <p>Sometimes I make fun code projects, check them out below.</p>
-    <h2>Make a Randomly Generated Map</h2>
-    <p>Click to pause on a map you really like.</p>
-    <p><iframe width="800" height="842" src="https://editor.p5js.org/jesszargo/full/x5UzcQHiP"></iframe></p>
-    <h2>Fireworks</h2>
-    <p>Randomly generated city, night sky, and fireworks.</p>
-    <p><iframe width="800" height="842" src="https://editor.p5js.org/jesszargo/full/21rLD0FW6T"></iframe></p>  
-      <h2>Flower</h2>
-      <p>Make a flower with a variable number of petals.</p>
-      <p><iframe width="400" height="400" src="https://editor.p5js.org/jesszargo/full/oodeQyODr"></iframe></p>
-</body></html>
+	<!--script src="p5.js"></script>
+	<script src="p5.sound.min.js"></script-->
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta charset="utf-8">
+</head>
+<body>
+	<h1>Jess's Project Notebook</h1>
+	<p>Hi, I'm Jess.</p>
+	<p>Sometimes I make fun code projects, check them out below.</p>
+	<h2>Make a Randomly Generated Map</h2>
+	<p>Click to pause on a map you really like.</p>
+	<p><iframe width="800" height="842" src="https://editor.p5js.org/jesszargo/full/x5UzcQHiP"></iframe></p>
+	<h2>Fireworks</h2>
+	<p>Randomly generated city, night sky, and fireworks.</p>
+	<p><iframe width="800" height="842" src="https://editor.p5js.org/jesszargo/full/21rLD0FW6T"></iframe></p>  
+	<h2>Flower</h2>
+	<p>Make a flower with a variable number of petals.</p>
+	<p><iframe width="400" height="442" src="https://editor.p5js.org/jesszargo/full/oodeQyODr"></iframe></p>
+</body>
+</html>
